--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,15 +1,83 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Adalab Web Starter Kit</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
-    <link rel="stylesheet" href="./assets/css/main.css" />
-    <link rel="icon" href="./assets/images/favicon.png" />
-  </head>
+<head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
+<title>ANONYMOUS</title>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Roboto:wght@500&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="./assets/css/main.css" />
+<body>
+<main> 
+<header>
+<img src="" alt="hamburguesa">
+</header>
 
-  <body>
-    Rellename!
-  </body>
+<section> 
+<h1> ANONYMOUS PROXY</h1>
+<p> In hac habitasse platea dictumst</p>
+<figure>
+<img src="" alt="flecha"> 
+</figure>
+
+</section>
+
+<section> 
+<p> insomia tips</p>
+
+<h2>Looking Through A Window</h2>
+<p>Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper sodales rotrum.</p> 
+<figure>
+<button> Go </button>
+</figure> 
+
+</section>
+
+<section>
+<h2>3 Reasons To Purchase</h2>
+
+<article> 
+<h2>Ut sed metus</h2>
+<p> lorem ipsum dolor sit amet consecteur.</p>
+</article>
+
+<h2>Curabitur ac erat</h2>
+<p> Mauris mattis urna quis lorem molestie.</p>
+
+<article>
+<h2> Morbi dictums </h2>
+<p> Alicuam in dolor et dolor tincidunt.</p>
+</article>
+
+<button> More Reasons </button>
+<img src="" alt="flechitaarriba">
+
+</section>
+</main>
+
+<footer>
+<p>@2023 </p>
+<p> we (love)components</p>
+<nav>
+<ul>
+<li> ARTICLES</li>
+<li> BOOKS</li>
+<li> EVENTS</li>
+<li> REASONS </li>
+<li> TIPS</li>
+</ul>
+</nav>
+<nav>
+<ul>
+<li>TWITTER</li>
+<li>INSTAGRAM</li>
+<li>MASTODONT.SOCIAL</li>
+</ul>
+</nav>
+
+</footer>
+</body>
 </html>
+
