--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
         <span class="more-reasons"> More Reasons </span>
         </div>
 
-        <img src="./assets/images/flecha2.png." alt="flechitaarriba">
+        <img src="./assets/images/ico-arrow.png" alt="flechitaarriba">
 
         </section>
         <footer>
