--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
             <h1 class="title"> ANONYMOUS PROXY </h1>
             <p class="hero-text"> In hac habitasse platea dictumst</p>
             <figure class="figure">
-              <img class="ico-scroll" src="./assets/images/flecha2.png" alt="flecha">
+              <img class="ico-scroll" src="./assets/images/flecha2.png" alt="contenido">
             </figure>
           </div>
         </section>
@@ -70,14 +70,16 @@
           <div class="more-reasons-box">
             <span class="more-reasons"> More Reasons </span>
           </div>
+        <figure class="ico-arrow-box">
+          <img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="volver inicio" />
+        </figure>
 
-          <img src="./assets/images/ico-arrow.png" alt="flechitaarriba" />
         </section>
 
         <footer>
         <div class="footer-box">
             <nav class="list-1">
-                <ul>
+                <ul class="ul-1">
                     <li> ARTICLES</li>
                     <li> BOOKS</li>
                     <li> EVENTS</li>
@@ -94,8 +96,12 @@
                     <li>MASTODONT.SOCIAL</li>
                 </ul>
             </nav>
+            <span class="footer">
             <p>@2023 </p>
+        </span>
+        <span class="love">
             <p> we (love)components</p>
+        </span>
         </div>
 
         </footer>
