--- a/public/index.html
+++ b/public/index.html
@@ -14,40 +14,45 @@
  <body>
     <main> 
         <header class="header">
-            <img class="menu" src="./assets/images/ico-menu.png" alt="menu">
+
+            <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu" src="./assets/images/ico-menu.png"
+                    alt="menu"></a>
+
         </header>
         <section class="hero">
           <div class="hero-box">
             <h1 class="title"> ANONYMOUS PROXY </h1>
             <p class="hero-text"> In hac habitasse platea dictumst</p>
             <figure class="figure">
-              <img class="ico-scroll" src="./assets/images/flecha2.png" alt="contenido">
-            </figure>
+             <a href="#reasons"><img class="ico-scroll" src="./assets/images/flecha2.png" alt="reasons" ></a>
+          </figure>
           </div>
         </section>
         <section>
           <span class="insomnia">
             <p>insomia tips</p>
           </span>
+          <div class="columna">
           <span class="looking">
             <h2>Looking Through A Window</h2>
           </span>
           <span class="donec">
             <p>
-              Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at
-              lotus ex diamnec lectus.Vivamus semper sodales rotrum.
+              Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper sodales rotrum.
             </p>
+          
           </span>
           <figure>
             <div class="botton-go">
               <span class="go-text"> Go </span>
             </div>
           </figure>
+        </div>
         </section>
 
         <section class="section-2">
           <span class="reasons">
-            <h2>3 Reasons To Purchase</h2>
+            <h2 id="reasons">3 Reasons To Purchase</h2>
           </span>
 
           <article>
