add links in footer

--- a/public/index.html
+++ b/public/index.html
@@ -85,20 +85,20 @@
         <div class="footer-box">
             <nav class="list-1">
                 <ul class="ul-1">
-                    <li> ARTICLES</li>
-                    <li> BOOKS</li>
-                    <li> EVENTS</li>
-                    <li> REASONS </li>
-                    <li> TIPS</li>
+                    <a href="https://adalab.es/bootcamp-programacion/" target="_blank"><li > ARTICLES</li></a>
+                   <a href="https://adalab.es/blog/" target="_blank"><li> BOOKS</li></a>
+                   <a href="https://adalab.es/equipo/" target="_blank"> <li> EVENTS</li></a>
+                    <a href="https://adalab.es/por-que-elegirnos/" target="_blank" ><li> REASONS </li></a>
+                    <a href="https://adalab.es/contacto/" target="_blank"><li> TIPS</li></a>
                 </ul>
             </nav>
 
             
             <nav class="list-2">
                 <ul>
-                    <li>TWITTER</li>
-                    <li>INSTAGRAM</li>
-                    <li>MASTODONT.SOCIAL</li>
+                    <a href=""><li>TWITTER</li></a>
+                   <a href=""> <li>INSTAGRAM</li></a>
+                   <a href=""> <li>MASTODONT.SOCIAL</li></a>
                 </ul>
             </nav>
             <span class="footer">
