add changes section 2

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -15,6 +15,8 @@
     <main> 
         <include src="./partials/header.html"> </include>
         <include src="./partials/hero.html"></include>
+        <include src="./partials/section-1.html"></include>
+        <include src="./partials/section-2.html"></include>
         <include src="./partials/sections.html"> </include>
         <include src="./partials/footer.html"></include>
         
