--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
 
             <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu" src="./assets/images/ico-menu.png"
                     alt="menu"></a>
-
+                
         </header>
         <section class="hero">
           <div class="hero-box">
@@ -28,7 +28,7 @@
           </figure>
           </div>
         </section>
-        <section>
+        <section id="burguer">
             <span class="insomnia">
               <p>insomia tips</p>
             </span>
@@ -75,7 +75,7 @@
               <span class="more-reasons"> More Reasons </span>
             </div>
           <figure class="ico-arrow-box">
-            <img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="volver inicio" />
+           <a href="#burguer"><img class="ico-arrow" src="./assets/images/ico-arrow.png" alt="home" /></a>
           </figure>
           
           </section>
