--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
         </section>
         <section id="burguer">
             <span class="insomnia">
-              <p>insomia tips</p>
+              <p>Insomia tips</p>
             </span>
             <div class="columna">
             <span class="looking">
@@ -107,7 +107,7 @@
             <p>@2023 </p>
         </span>
         <span class="love">
-            <p> we (love)components</p>
+            <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
         </span>
         </div>
 
