--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&family=Roboto:wght@500&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/main.css" />
 </head>
 
@@ -121,12 +122,12 @@
                         </a>
                     </ul>
                 </nav>
-                <div>
-                    <span class="footer">
-                        <p>@2023 </p>
-                    </span>
+                <div class="footer">
+
+                    <p>@2023 </p>
+
                     <span class="love">
-                        <p> we <img class="heart" src="./assets/images/amar.png" alt="ico-heart"> components </p>
+                        <p> we <span class="heart">♥</span> components </p>
                     </span>
                 </div>
             </div>
