--- a/public/index.html
+++ b/public/index.html
@@ -17,14 +17,14 @@
 <body>
     <main>
         <header class="header">
-
-            <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu" src="./assets/images/ico-menu.png"
-                    alt="menu"></a>
-
+            <nav>
+                <a class="adalab-web" href="https://adalab.es/" target="_blank"><img class="menu"
+                        src="./assets/images/ico-menu.png" alt="menu"></a>
+            </nav>
         </header>
         <section class="hero">
           <div class="hero-box">
-            <h1 class="title"> ANONYMOUS PROXY </h1>
+            <h1 class="title"> Anonimous Proxy </h1>
             <p class="hero-text"> In hac habitasse platea dictumst</p>
             <figure class="figure">
               <a href="#reasons"><img class="ico-scroll" src="./assets/images/flecha2.png" alt="reasons"></a>
@@ -33,23 +33,17 @@
         </section>
         <section id="burguer">
           <div class="columna">
-            <span class="insomnia">
-              <p>Insomia tips</p>
-            </span>
-
-            <span class="looking">
-              <h2>Looking Through A Window</h2>
-            </span>
-            <span class="donec">
-              <p>
-                Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
-                sodales rotrum.
-              </p>
+            <p class="insomnia"> Insomia tips</p>
+            <h2 class="looking">Looking Through A Window</h2>
+            <p class="donec">
+              Donec accumsan, nulla ut volupat porttitor, quam odiotempus felis, at lotus ex diamnec lectus.Vivamus semper
+              sodales rotrum.
+            </p>
             </span>
             <figure>
-              <div class="botton-go">
+              <button class="botton-go">
                 <span class="go-text"> Go </span>
-              </div>
+              </button>
             </figure>
           </div>
         </section>
